syntax = "proto3";

option go_package = "github.com/koliader/posts-gateway";
import "Entities.proto";
import "google/api/annotations.proto";

service Post {
  rpc CreatePost(CreatePostReq) returns (CreatePostRes) {
    option (google.api.http) = {
      post: "/v1/craetePost"
      body: "*"
    };
  }
  rpc GetPost(GetPostReq) returns (GetPostRes) {
    option (google.api.http) = {
      post: "/v1/getPost"
      body: "*"
    };
  }
  rpc ListPosts(Empty) returns (ListPostsRes) {
    option (google.api.http) = {
      post: "/v1/lisPosts"
      body: "*"
    };
  }
}

message CreatePostReq {
  UserEntity owner = 1;
  string Title = 2;
  string Body = 3;
}

message CreatePostRes {
  PostEntity post = 1;
}

message GetPostReq {
  string Title = 1;
}

message GetPostRes {
  PostEntity Post = 1;
}

message Empty {}

message ListPostsRes {
  repeated PostEntity Posts = 1;
}

